--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
-    "http-status": "^1.6.2"
+    "http-status": "^1.6.2",
+    "mysql2": "^3.1.2"
   }
 }
